fix navigation mobile

--- a/sass/partials/content/_footer.scss
+++ b/sass/partials/content/_footer.scss
@@ -49,27 +49,27 @@ section#footer {
         }
       }
       >li:nth-child(6) {
-        clear: both;
-        margin: 20px 0;
+        // clear: both;
+        // margin: 20px 0;
         ul {
           >li {
             a {
-              font-size: 24px;
+              // font-size: 24px;
             }
           }
         }
       }
       >li:nth-child(7) {
-        display: block;
-        margin: 20px 0;
-        text-align: left;
+        // display: block;
+        // margin: 20px 0;
+        // text-align: left;
         >ul {
           li:nth-child(2) {
           //  background: url("../img/ministerios.png") no-repeat;
-            background-position: center 30px;
-            background-size: 100%;
-            width: 80%;
-            height: 100px;
+            // background-position: center 30px;
+            // background-size: 100%;
+            // width: 80%;
+            // height: 100px;
           }
 
         }
